--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@supabase/supabase-js": "^2.57.0",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
@@ -21,10 +22,13 @@
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "expo": "^54.0.30",
+    "expo-apple-authentication": "~7.1.3",
+    "expo-auth-session": "~6.2.0",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "^15.0.8",
     "expo-camera": "^17.0.10",
     "expo-constants": "~17.1.7",
+    "expo-crypto": "~14.1.0",
     "expo-file-system": "^19.0.21",
     "expo-font": "~13.3.2",
     "expo-gl": "^16.0.9",
@@ -33,6 +37,7 @@
     "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~7.1.7",
+    "expo-media-library": "~17.0.6",
     "expo-router": "~5.1.4",
     "expo-speech": "^14.0.8",
     "expo-splash-screen": "~0.30.10",
@@ -40,6 +45,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
+    "firebase": "^10.14.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
@@ -50,11 +56,14 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.15.1",
+    "react-native-view-shot": "3.8",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
