--- a/frontend/app.json
+++ b/frontend/app.json
@@ -37,6 +37,13 @@
     "plugins": [
       "expo-router",
       "expo-apple-authentication",
+      "react-native-vision-camera",
+      [
+        "react-native-fast-tflite",
+        {
+          "enableCoreMLDelegate": true
+        }
+      ],
       [
         "expo-splash-screen",
         {
