--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,23 +12,25 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
-    "@supabase/supabase-js": "^2.57.0",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.9.0",
+    "@supabase/supabase-js": "^2.57.0",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "expo": "^54.0.30",
     "expo-apple-authentication": "~7.1.3",
     "expo-auth-session": "~6.2.0",
+    "expo-av": "~16.0.7",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "^15.0.8",
     "expo-camera": "^17.0.10",
     "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.0",
+    "expo-dev-client": "^6.0.20",
     "expo-file-system": "^19.0.21",
     "expo-font": "~13.3.2",
     "expo-gl": "^16.0.9",
@@ -50,16 +52,19 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fast-tflite": "^1.6.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-gifted-charts": "^1.4.70",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.15.1",
-    "react-native-view-shot": "3.8",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-view-shot": "3.8",
+    "react-native-vision-camera": "^4.7.3",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "vision-camera-resize-plugin": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
